--- a/csharp_method_practice/MainWindow.xaml
+++ b/csharp_method_practice/MainWindow.xaml
@@ -11,6 +11,7 @@
         <Button Content="Substring()" HorizontalAlignment="Left" Margin="278,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_1"/>
         <Button Content="Reverse()" HorizontalAlignment="Left" Margin="400,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_2"/>
         <Button Content="Join()" HorizontalAlignment="Left" Margin="522,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_3"/>
+        <Button Content="Sort()" HorizontalAlignment="Left" Height="24" Margin="155,248,0,0" VerticalAlignment="Top" Width="65" Click="Button_Click_4"/>
 
     </Grid>
 </Window>
