--- a/csharp_method_practice/MainWindow.xaml
+++ b/csharp_method_practice/MainWindow.xaml
@@ -12,6 +12,9 @@
         <Button Content="Reverse()" HorizontalAlignment="Left" Margin="400,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_2"/>
         <Button Content="Join()" HorizontalAlignment="Left" Margin="522,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_3"/>
         <Button Content="Sort()" HorizontalAlignment="Left" Height="24" Margin="155,248,0,0" VerticalAlignment="Top" Width="65" Click="Button_Click_4"/>
+        <Button Content="Compare()" HorizontalAlignment="Left" Margin="273,248,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_5"/>
+        <Button Content="EndWith()" HorizontalAlignment="Left" Margin="400,248,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_6"/>
+        <Button Content="StartWith()" HorizontalAlignment="Left" Margin="522,248,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_7"/>
 
     </Grid>
 </Window>
