--- a/csharp_method_practice/MainWindow.xaml
+++ b/csharp_method_practice/MainWindow.xaml
@@ -11,10 +11,18 @@
         <Button Content="Substring()" HorizontalAlignment="Left" Margin="278,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_1"/>
         <Button Content="Reverse()" HorizontalAlignment="Left" Margin="400,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_2"/>
         <Button Content="Join()" HorizontalAlignment="Left" Margin="522,179,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_3"/>
-        <Button Content="Sort()" HorizontalAlignment="Left" Height="24" Margin="155,248,0,0" VerticalAlignment="Top" Width="65" Click="Button_Click_4"/>
-        <Button Content="Compare()" HorizontalAlignment="Left" Margin="273,248,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_5"/>
-        <Button Content="EndWith()" HorizontalAlignment="Left" Margin="400,248,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_6"/>
-        <Button Content="StartWith()" HorizontalAlignment="Left" Margin="522,248,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_7"/>
+        <Button Content="Sort()" HorizontalAlignment="Left" Height="24" Margin="155,217,0,0" VerticalAlignment="Top" Width="65" Click="Button_Click_4"/>
+        <Button Content="Compare()" HorizontalAlignment="Left" Margin="273,217,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_5"/>
+        <Button Content="EndWith()" HorizontalAlignment="Left" Margin="400,217,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_6"/>
+        <Button Content="StartWith()" HorizontalAlignment="Left" Margin="522,217,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_7"/>
+        <Button Content="" HorizontalAlignment="Left" Margin="155,140,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="278,140,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="399,140,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="522,140,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="LastIndexOf()" HorizontalAlignment="Left" Margin="155,263,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_8"/>
+        <Button Content="IndexOf()" HorizontalAlignment="Left" Margin="278,263,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_9"/>
+        <Button Content="Contains()" HorizontalAlignment="Left" Margin="404,263,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_10"/>
+        <Button Content="Replace()" HorizontalAlignment="Left" Margin="527,263,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_11"/>
 
     </Grid>
 </Window>
