--- a/csharp_method_practice/MainWindow.xaml
+++ b/csharp_method_practice/MainWindow.xaml
@@ -15,14 +15,20 @@
         <Button Content="Compare()" HorizontalAlignment="Left" Margin="273,217,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_5"/>
         <Button Content="EndWith()" HorizontalAlignment="Left" Margin="400,217,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_6"/>
         <Button Content="StartWith()" HorizontalAlignment="Left" Margin="522,217,0,0" VerticalAlignment="Top" Height="24" Width="75" Click="Button_Click_7"/>
-        <Button Content="" HorizontalAlignment="Left" Margin="155,140,0,0" VerticalAlignment="Top" Width="70"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="278,140,0,0" VerticalAlignment="Top" Width="70"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="399,140,0,0" VerticalAlignment="Top" Width="70"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="522,140,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="" HorizontalAlignment="Left" Margin="146,142,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="269,142,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="390,142,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="Fo" HorizontalAlignment="Left" Margin="513,142,0,0" VerticalAlignment="Top" Width="70"/>
         <Button Content="LastIndexOf()" HorizontalAlignment="Left" Margin="155,263,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_8"/>
         <Button Content="IndexOf()" HorizontalAlignment="Left" Margin="278,263,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_9"/>
         <Button Content="Contains()" HorizontalAlignment="Left" Margin="404,263,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_10"/>
         <Button Content="Replace()" HorizontalAlignment="Left" Margin="527,263,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_11"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="269,142,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="CopyTo()" HorizontalAlignment="Left" Margin="158,297,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_12"/>
+        <Button Content="Format()" HorizontalAlignment="Left" Margin="283,297,0,0" VerticalAlignment="Top" Width="70" Click="Button_Click_13"/>
+        <Button Content="" HorizontalAlignment="Left" Margin="402,297,0,0" VerticalAlignment="Top" Width="70"/>
+        <Button Content="" HorizontalAlignment="Left" Margin="527,297,0,0" VerticalAlignment="Top" Width="70"/>
+
 
     </Grid>
 </Window>
