--- a/LeetCode/MainWindow.xaml
+++ b/LeetCode/MainWindow.xaml
@@ -18,6 +18,11 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="360,99,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="170,153,0,0" VerticalAlignment="Top" Click="Button_Click_3"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="254,153,0,0" VerticalAlignment="Top" Click="Button_Click_4"/>
+        <Button Content="Button" HorizontalAlignment="Center" Margin="0,163,0,0" VerticalAlignment="Top" Click="Button_Click_5"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="170,198,0,0" VerticalAlignment="Top" Click="Button_Click_6"/>
 
     </Grid>
 </Window>
